[package]
name = "atomic_register"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rkyv = { version = "0.8", features = ["big_endian"] }
anyhow = { version = "1" }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8"
futures = "0.3"
thread-id = "4.2"
tokio-util = "0.7"
